# testing

./: .dockerignore  .env_example  .gitignore  CHANGELOG.md  Dockerfile  README.md  chainlit.md  pyproject.toml  trained_agents_data.pkl  training_data.pkl
.chainlit/: config.toml
.chainlit/translations/: fr.json
data/reference_models/: APRÈS_ASS_Décision_supp_prestations_Réquisition poursuites.docx  APRÈS_DEM_Arrivée sur canton de Vaud assisté + autonome.docx  ASOC_Modalités de prise en charge de lunettes_après.docx  ASOC_PCFam information AP droit_après.docx  ASOC_PC_Envoi formulaire au RA_après.docx  ASOC_Refus signature cession_après.docx  ASOC_Transfert en individuel cas DIRHEB Bénéficiaire_après.docx  Après_Convocation cours SI_Chavannes 33b.docx  DON_Décision de fin prise en charge_FALC.docx  DPS décision_Refus pour aide financière supplementaire_FALC.docx  Frise autonomie FALC_corr_FKR.docx  Guide recherche d'appartement_texte_corr LPS.docx  Livret majorité__corr FKR.docx  Visite à domicile FALC.docx
data/testmodels/: ASOC_Refus signature cession_avant.docx  ASOC_Transfert en individuel cas DIRHEB Bénéficiaire_avant.docx  Avant_Convocation PFPP Aux de santé.docx
falc_crew-main/: CHANGELOG.md  README.md
falc_crew-main/src/: chainlit_app.py
falc_crew-main/src/falc_crew/: main.py
knowledge/: falc_guidelines.md  icons.json
src/: chainlit_app.py
src/falc_crew/: crew.py  main.py
src/falc_crew/config/: agents.yaml  tasks.yaml
src/falc_crew/tools/: __init__.py  custom_tool.py
tests/: test_docx_file_format.py
(+1 files in other folders)
